[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pynput"
version = "1.0.0"
description = "Sends virtual input commands"
readme = "README.rst"
authors = [{ name = "Kanishk Pachauri", email = "itskanishkp.py@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["pyinput-patch", "toml", "commandline"]
dependencies = [
    "six",
    "pyobjc-framework-ApplicationServices >=8.0; platform_system=='darwin'",
    "pyobjc-framework-Quartz >=8.0; platform_system=='darwin'",
    "evdev >= 1.3; platform_system=='linux'",
    "python-xlib >= 0.17; platform_system=='linux'"
]
requires-python = ">=3.9"


[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest", "setuptools-lint", "sphinx", "twine"]

[project.urls]
Homepage = "https://github.com/Mr-Sunglasses/pynput"
Docs = "https://pynput.readthedocs.io/en/latest/"


[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"lib/pynput/_info.py" = ["{version}"]